# YouTube_Content_Optimizer_Crew

./: README.md  pyproject.toml
src/youtube_optimizer/: crew.py  main.py
src/youtube_optimizer/config/: agents.yaml  tasks.yaml
