[project]
name = "youtube_optimizer"
version = "0.1.0"
description = "YouTube Content Optimizer using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "langchain-core>=0.2.30",
]

[project.scripts]
youtube_optimizer = "youtube_optimizer.main:run"
run_crew = "youtube_optimizer.main:run"
train = "youtube_optimizer.main:train"
replay = "youtube_optimizer.main:replay"
test = "youtube_optimizer.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
